--- a/Legacy Python/Dictionaries_Common Applications.ipynb
+++ b/Legacy Python/Dictionaries_Common Applications.ipynb
@@ -118,9 +118,91 @@
    ]
   },
   {
+   "cell_type": "raw",
+   "id": "88962a10-8d4c-4059-95d8-4aedfab9cb62",
+   "metadata": {},
+   "source": [
+    "THE get METHOD FOR DICTIONARIES\n",
+    "*The pattern of checking to see if a key is already in a dictionary and assuming a default value if the key is not there is so common that there is a method called get() that does this for us."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92b13367-5a35-4aa5-a63b-e995f92dfeed",
+   "id": "266b758c-e76f-4b03-854f-ddc7aca2c817",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if name in counts:\n",
+    "    x = counts[name]\n",
+    "else:\n",
+    "    x = 0\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0bfa06a7-3cc5-4b8a-bbbd-1408c7271320",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = counts.get(name, 0)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "9b9cd210-8604-4d8c-a29e-8405084fe700",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'csev': 1, 'cwen': 2, 'zqian': 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "counts = dict()\n",
+    "names = names = ['csev', 'cwen', 'zqian', 'cwen']\n",
+    "for name in names:\n",
+    "    counts[name] = counts.get(name, 0) +1\n",
+    "print(counts)"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "ee853455-296c-4e1d-b2ed-4c076604b3b1",
+   "metadata": {},
+   "source": [
+    "we can use get() and provide a default value of zero when the key is not\n",
+    "in the dictionary and then just add one"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "58a06653-5ac7-4ca5-90c0-bbe59c9d8338",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "counts = { 'quincy' : 1 , 'mrugesh' : 42, 'beau': 100, '0': 10}\n",
+    "print(counts.get('0', 0))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2e431cdb-acfd-4152-95c5-8a827625766e",
    "metadata": {},
    "outputs": [],
    "source": []
